--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,13 @@ body {
   transform: scale(1.1);
   /* scale up on hover */
 }
+
+/* src/Component/QuerloWidget.css */
+.querlo {
+  height: 230px;
+  /* Set your desired height here */
+  width: 100%;
+  /* z-index: -1; */
+  margin-bottom: 300px;
+  /* Optionally, set the width */
+}
